# PythonBoilerplate

./: .clinerules  .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .tool-versions  .yamllint.yml  CHANGELOG.md  Dockerfile  README.md  copy_template.sh  pyproject.toml  rename_project.sh  renovate.json  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: rulesets_defaultbranch.json  rulesets_tags.json
.github/workflows/: cleanup-caches-by-a-branch.yml  pre-commit.yml  scheduled_sync.yml  workflow.yml
.github/workflows/projmr/: pyproject.toml
.github/workflows/projmr/src/projmr/: __init__.py  cli.py
docs/: conf.py  tutorial.md
docs/source/: conf.py  index.rst
docs/tutorial/: README.md  tutorial.md
src/pythonboilerplate/: __init__.py  _version.py  cli.py
templates/continue/: config.json
templates/github/: rulesets_tags.json
tests/: __init__.py  conftest.py  test_pyproject.py  test_pythonboilerplate.py  test_vscode_extensions.py
